overflow issue fix

--- a/src/stages/Simulation/Simulation.module.scss
+++ b/src/stages/Simulation/Simulation.module.scss
@@ -1,6 +1,8 @@
 .container {
+  height: 100vh;
   position: relative;
   overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 .aside {
